--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -75,13 +75,13 @@ RUN apt -y install mariadb-server
 ################# IOT DATA
 WORKDIR IotSolution
 
-RUN wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=1yRgDYrWnHu74NYX9GMAVDjR10ZyfoZvh' -O IoTData.zip
-RUN chmod +x IoTData.zip
-RUN unzip IoTData.zip
+#RUN wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=1yRgDYrWnHu74NYX9GMAVDjR10ZyfoZvh' -O IoTData.zip
+#RUN chmod +x IoTData.zip
+#RUN unzip IoTData.zip
 
-RUN wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=1_RICecxEZUjuCfm_MxPGwrOXxQ5w179O' -O dsntmlidmain.csv
-RUN chmod +x dsntmlidmain.csv
-RUN rm -rf IoTData.zip
+#RUN wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=1_RICecxEZUjuCfm_MxPGwrOXxQ5w179O' -O dsntmlidmain.csv
+#RUN chmod +x dsntmlidmain.csv
+#RUN rm -rf IoTData.zip
 
 WORKDIR /
 
